# EtherBench

./: .gitignore  .gitmodules  404.html  README.md  etherbench.drawio  index.html  mkdocs.yml  sitemap.xml
app/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp
app/bridge/: CMakeLists.txt  SystemController.cpp  SystemController.hpp
app/bridge/Pages/: CMakeLists.txt
app/bridge/Pages/Debugger/: CMakeLists.txt
app/bridge/Pages/Home/: CMakeLists.txt
app/bridge/Pages/Memory/: CMakeLists.txt
app/bridge/Pages/Sequences/: CMakeLists.txt
app/bridge/SystemController/: SystemController.cpp  SystemController.hpp
app/configs/settings/: settings.json
app/core/: AppCore.cpp  AppCore.hpp  CMakeLists.txt
app/core/IO/: CMakeLists.txt
app/core/IO/lan/: CMakeLists.txt
app/core/IO/usb/: CMakeLists.txt
app/core/IOController/: CMakeLists.txt
app/core/IOController/CommandParser/: CommandParser.hpp
app/core/Models/: CMakeLists.txt
app/core/Models/DebuggerModel/: CMakeLists.txt  DebuggerField.hpp  DebuggerModel.cpp  DebuggerModel.hpp
app/core/Models/MemoryModel/: CMakeLists.txt  MemoryModel.hpp
app/core/Models/SettingsModel/: SettingsModel.cpp  SettingsModel.hpp
app/core/io/: CMakeLists.txt
app/core/io/lan/: CMakeLists.txt
app/core/model/: CMakeLists.txt
app/core/model/caster/: CMakeLists.txt
app/core/model/commands/: CMakeLists.txt
app/core/model/counter/: CMakeLists.txt
app/core/model/memory/: CMakeLists.txt
app/core/model/parameter/: CMakeLists.txt
app/core/model/settings/: CMakeLists.txt
app/core/model/status/: CMakeLists.txt
app/core/services/: CMakeLists.txt
app/core/services/bufferAnalyse/: CMakeLists.txt
app/core/services/dataCast/: CMakeLists.txt
app/decoders/base/buses/: i2c.json  spi.json  usart.json
app/libs/: CMakeLists.txt
app/main/: CMakeLists.txt
app/main/include/: window.hpp
app/main/src/: window.cpp
app/qml/: CMakeLists.txt  Main.qml  main.qml
app/qml/components/: Button.qml  CMakeLists.txt  ContextualMenu.qml  StatusETH.qml  StatusUSB.qml  qmldir
app/qml/menus/: Build.qml  Debugger.qml  DebuggerMenu.qml  File.qml  FileMenu.qml  IO.qml  IOMenu.qml  Memory.qml  View.qml  ViewMenu.qml
app/qml/theme/: Theme.qml
app/qml/views/: CMakeLists.txt  Debugger.qml  DebuggerView.qml  Help.qml  HelpView.qml  Home.qml  InputOutput.qml  InputOutputView.qml  Memory.qml  Sequences.qml  SequencesView.qml  Settings.qml  SettingsView.qml  qmldir
app/qml/views/debugger/: DebuggerLogs.qml  Details.qml  Logs.qml
app/qml/views/settings/: Editor.qml  Tree.qml
app/ressources/: ressources.qrc
app/ressources/docs/css/: style.css
app/ressources/docs/html/: main.html
app/ressources/icons/: link.md
app/ressources/icons/app/: ressources.rc
app/ressources/styles/: dark.qss
app/settings/: settings.json
app/views/: CMakeLists.txt
app/views/base/: CMakeLists.txt
app/views/base/src/: baseView.cpp
app/views/debugger/: CMakeLists.txt
app/views/debugger/src/: debuggerView.cpp
app/views/help/: CMakeLists.txt
app/views/help/src/: helpView.cpp
app/views/home/: CMakeLists.txt
app/views/home/src/: homeView.cpp
app/views/io/: CMakeLists.txt
app/views/io/src/: ioView.cpp
app/views/memory/: CMakeLists.txt
app/views/memory/private/: memoryHexView.hpp
app/views/memory/src/: memoryHexView.cpp  memoryView.cpp
app/views/muxer/: CMakeLists.txt
app/views/muxer/src/: muxerView.cpp
app/views/plot/: CMakeLists.txt
app/views/plot/src/: plotView.cpp
app/views/programmer/: CMakeLists.txt
app/views/programmer/src/: programmerView.cpp
app/views/sequence/: CMakeLists.txt
app/views/sequence/src/: sequenceView.cpp
app/views/settings/: CMakeLists.txt
app/views/settings/src/: settingsView.cpp
src/: .clang-format  .clangd  .cproject  .project  CMakeLists.txt  CMakePresets.json  EtherBench Debug.launch  EtherBench.launch  gcc-arm-none-eabi.cmake  list_files.py  main.c  stm32h563.svd  tasks.drawio
src/bsp/: CMakeLists.txt
src/bsp/ethernet/: CMakeLists.txt
src/bsp/ethernet/lan8742/: CMakeLists.txt
src/bsp/lan8742/: CMakeLists.txt
src/bsp/lan8742/include/: lan8742.h
src/bsp/lan8742/src/: lan8742.c
src/config/: main.h
src/hal/: CMakeLists.txt
src/hal/hal/: CMakeLists.txt
src/hal/hal/include/: stm32h5xx.h  stm32h5xx_hal.h  stm32h5xx_hal_adc.h  stm32h5xx_hal_adc_ex.h  stm32h5xx_hal_cec.h  stm32h5xx_hal_comp.h  stm32h5xx_hal_conf.h  stm32h5xx_hal_cordic.h  stm32h5xx_hal_cortex.h  stm32h5xx_hal_crc.h  stm32h5xx_hal_crc_ex.h  stm32h5xx_hal_cryp.h  stm32h5xx_hal_cryp_ex.h  stm32h5xx_hal_dac.h  stm32h5xx_hal_dac_ex.h  stm32h5xx_hal_dcache.h  stm32h5xx_hal_dcmi.h  stm32h5xx_hal_def.h  stm32h5xx_hal_dma.h  stm32h5xx_hal_dma_ex.h  stm32h5xx_hal_dts.h  stm32h5xx_hal_eth.h  stm32h5xx_hal_eth_ex.h  stm32h5xx_hal_exti.h  stm32h5xx_hal_fdcan.h  stm32h5xx_hal_flash.h  stm32h5xx_hal_flash_ex.h  stm32h5xx_hal_fmac.h  stm32h5xx_hal_gpio.h  stm32h5xx_hal_gpio_ex.h  stm32h5xx_hal_gtzc.h  stm32h5xx_hal_hash.h  (+87 more)
src/hal/init/: CMakeLists.txt
src/hal/interrupts/: CMakeLists.txt
src/hal/startup/: CMakeLists.txt
src/hal/system/: CMakeLists.txt
src/interrupts/src/: it.c  stm32h5xx_it.c
src/launcher/: CMakeLists.txt
src/launcher/include/: launcher.h
src/launcher/src/: launcher.c
src/tasks/: CMakeLists.txt
src/tasks/controller/: CMakeLists.txt
src/tasks/files/: CMakeLists.txt
src/tasks/hardware/: CMakeLists.txt
src/tasks/idle/: CMakeLists.txt
src/tasks/inet/: CMakeLists.txt
src/tasks/interface/: CMakeLists.txt
src/tasks/leds/: CMakeLists.txt
src/tasks/logger/: CMakeLists.txt
src/tasks/muxer/: CMakeLists.txt
src/tasks/parser/: CMakeLists.txt
src/tasks/programmer/: CMakeLists.txt
src/tasks/shell/: CMakeLists.txt
src/tasks/usb/: CMakeLists.txt
src/tasks/vcom/: CMakeLists.txt
src/threadx/: CMakeLists.txt
src/threadx/fatx/: CMakeLists.txt
src/threadx/filex/: CMakeLists.txt
src/threadx/levelx/: CMakeLists.txt
src/threadx/netxduo/: CMakeLists.txt
src/threadx/threadx/: CMakeLists.txt
src/threadx/usbx/: CMakeLists.txt
(+1702 files in other folders)
